--- a/amazon-clone/src/index.css
+++ b/amazon-clone/src/index.css
@@ -2,6 +2,7 @@
   margin: 0px;
 }
 body {
+  background-color: rgba(234, 237, 237, 1);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
