complete amazon fullstack development

--- a/amazon-clone/src/CheckoutProduct.css
+++ b/amazon-clone/src/CheckoutProduct.css
@@ -21,6 +21,7 @@
     border-radius: 2px;
     border: 1px solid;
     border-color: #a88734 #9c7e31 #846a29;
+    cursor: pointer;
 }
 
 .checkoutProduct__title {
